k8s/infrastructure/network/policies/applications/media/media/allow-media-access.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-access
  namespace: media
  labels:
    policy-type: media-audit
spec:
  endpointSelector: {}
  description: "Allow media applications access"
  ingress:
  - fromEntities:
    - host
    - remote-node
    - ingress
    toPorts:
    - ports:
      - port: "8096"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "5055"
        protocol: TCP
      - port: "8983"
        protocol: TCP
      - port: "7878"
        protocol: TCP
      - port: "9696"
        protocol: TCP
      - port: "6767"
        protocol: TCP
      - port: "13378"
        protocol: TCP
      - port: "9000"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media
    toPorts:
    - ports:
      - port: "8989"
        protocol: TCP
      - port: "7878"
        protocol: TCP
      - port: "9696"
        protocol: TCP
      - port: "6767"
        protocol: TCP
      - port: "8080"
        protocol: TCP
      - port: "8096"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
  - toCIDR: ["10.0.0.0/8"]
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
      - port: "2049"
        protocol: TCP
  - toCIDR:
    - 239.255.255.250/32
    toPorts:
    - ports:
      - port: "1900"
        protocol: UDP
  - toCIDR:
    - 0.0.0.0/0
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "563"
        protocol: TCP
